--- a/package.json
+++ b/package.json
@@ -3,26 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "config": "ts-node ./config/index.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.0.1",
     "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
     "next": "14.0.0",
     "openai": "^4.20.0",
+    "pg": "^8.16.3",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/node": "^20",
+    "@types/pg": "^8.15.4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.0"
   }
 }
