--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.56.0",
     "@supabase/supabase-js": "^2.39.0",
     "@types/node": "^20",
     "@types/react": "^18",
